src/test/deca/syntax/invalid/extension/MatSansTaille.deca
// mismatched input ']' expecting {STRING, '{', '(', 'false', 'true', 'readInt', 'readFloat', 'new', 'this', 'null', '-', '!', FLOAT, INT, IDENT}
// Description:
//    Matrice sans taille lors de la création
//

{
    int[][][][][][] a = new float[][][][];
}

